--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ body {
     border:0;
     padding:20px 40px;
     border-radius: 7px;
+    display: block;
+    margin: 0 auto;
 }
 .error {
     font-family: sans-serif;
